2-userdata-ec2.yaml
Parameters:
 SecurityGroupDescription:
   Description: Security Group Description
   Type: String

Resources:
   myEC2Instance:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-a4c7edb2
       InstanceType: t2.micro
       AvailabilityZone: us-east-1a
       SecurityGroups:
         - !Ref SSHSecurityGroup
         - !Ref ServerSecurityGroup
       UserData: 
        Fn::Base64: |
          #!/bin/bash -xe
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo"Hello from UserData " > /var/www/html/index.html
       Tags:
         - Key: Name
           Value: My-ec2
         - Key: BU
           Value: HR

   myEIP:
      Type: AWS::EC2::EIP
      Properties:
        InstanceId: !Ref myEC2Instance

   SSHSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Enable SSh for EC2
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           FromPort: 22
           IpProtocol: tcp
           ToPort: 22

   ServerSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: !Ref SecurityGroupDescription
        SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           FromPort: 80
           IpProtocol: tcp
           ToPort: 80
         - CidrIp: 192.168.0.1/32
           FromPort: 22
           IpProtocol: tcp
           ToPort: 22
           
Outputs:
    EC2ID:
     Description: The Instance ID
     Value: !Ref myEC2Instance
     Export:
      Name: EC2ID
